clusters/talos-robbinsdale/apps-flux/monitoring/karma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karma
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: karma
  ports:
    - name: karma
      protocol: TCP
      port: 3000
      targetPort: karma
