clusters/talos-robbinsdale/apps-flux/monitoring/karma/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karma
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: envoy-gateway-system
  hostnames:
    - "karma.rajsingh.info"
    - "karma.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: karma
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
